--- a/index.html
+++ b/index.html
@@ -2,228 +2,164 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Aşk Oyunu 💖</title>
-
+<title>Seni Çok Seviyorum ❤️</title>
 <style>
-body{
-  margin:0;
-  background:linear-gradient(135deg,#ff9a9e,#fad0c4);
-  overflow:hidden;
-  font-family:Arial;
-  text-align:center;
-  color:black;
-}
+    body {
+        margin: 0;
+        background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+        overflow: hidden;
+        font-family: 'Arial', sans-serif;
+        text-align: center;
+    }
 
-h1{margin:10px;}
+    h1 {
+        color: white;
+        margin-top: 15px;
+        text-shadow: 2px 2px 8px #ff4d6d;
+    }
 
-#info{font-size:22px;}
+    #score {
+        color: white;
+        font-size: 22px;
+        margin-bottom: 5px;
+    }
 
-#basket{
-  position:fixed;
-  bottom:120px;              /* ⬆️ sepet yukarı alındı */
-  left:50%;
-  transform:translateX(-50%);
-  font-size:80px;            /* ⬆️ sepet büyütüldü */
-  cursor:grab;
-}
+    #basket {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 60px;
+        cursor: pointer;
+    }
 
-.item{
-  position:absolute;
-  font-size:55px;            /* ⬆️ emojiler büyütüldü */
-}
+    .item {
+        position: absolute;
+        top: -50px;
+        font-size: 48px;
+        animation: fall linear;
+    }
 
-.bad{
-  filter:grayscale(100%) brightness(0.3);
-}
+    @keyframes fall {
+        to {
+            transform: translateY(110vh);
+        }
+    }
 
-#slots{
-  position:fixed;
-  bottom:20px;               /* ⬇️ kutular aşağı alındı */
-  width:100%;
-  display:flex;
-  justify-content:center;
-  gap:12px;
-}
+    #message {
+        position: fixed;
+        inset: 0;
+        background: rgba(0,0,0,0.75);
+        display: none;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: white;
+        font-size: 36px;
+        z-index: 10;
+        padding: 20px;
+    }
 
-.slot{
-  width:45px;
-  height:45px;
-  border:2px solid black;
-  border-radius:8px;
-  font-size:26px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:rgba(255,255,255,.6);
-}
-
-#message{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.85);
-  color:white;
-  display:none;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-  font-size:32px;
-}
-
-button{
-  margin-top:20px;
-  padding:10px 25px;
-  font-size:20px;
-  border:none;
-  border-radius:12px;
-}
+    #message button {
+        margin-top: 20px;
+        padding: 12px 25px;
+        font-size: 20px;
+        border: none;
+        border-radius: 12px;
+        background: #ff4d6d;
+        color: white;
+        cursor: pointer;
+    }
 </style>
 </head>
-
 <body>
 
-<h1>Aşk Oyunu 💕</h1>
-<div id="info">Skor: <span id="score">0</span></div>
+<h1>❤️ Kocan Seni Çok Seviyor ❤️</h1>
+<div id="score">Skor: 0</div>
 
-<div id="slots"></div>
-<div id="basket">🗑️</div>
+<div id="basket">🧺</div>
 
 <div id="message">
-  <div id="msgText"></div>
-  <button onclick="location.reload()">Tekrar Oyna 🔁</button>
+    <div id="messageText"></div>
+    <button onclick="restart()">Tekrar Oyna 💕</button>
 </div>
 
 <script>
-const basket = document.getElementById("basket");
-const scoreText = document.getElementById("score");
-const slotsDiv = document.getElementById("slots");
-const message = document.getElementById("message");
-const msgText = document.getElementById("msgText");
+let basket = document.getElementById("basket");
+let scoreEl = document.getElementById("score");
+let message = document.getElementById("message");
+let messageText = document.getElementById("messageText");
 
 let score = 0;
-let speed = 3;
-let spawnRate = 1200;
 let gameOver = false;
 
-const word = ["Y","I","L","D","I","Z"];
-let letterIndex = 0;
+const goodItems = ["❤️","💋","😍","🥰","💖","A","Ş","K"];
+const badItems = ["💣","💔","🚀"];
 
-// kutular
-for(let i=0;i<6;i++){
-  const s=document.createElement("div");
-  s.className="slot";
-  slotsDiv.appendChild(s);
-}
-
-// sepet hareket
-document.addEventListener("mousemove",e=>{
-  basket.style.left=e.clientX+"px";
-});
-document.addEventListener("touchmove",e=>{
-  basket.style.left=e.touches[0].clientX+"px";
+document.addEventListener("mousemove", e => {
+    basket.style.left = e.clientX + "px";
 });
 
-function createItem(){
-  if(gameOver) return;
+function dropItem() {
+    if (gameOver) return;
 
-  const item=document.createElement("div");
-  item.className="item";
+    let item = document.createElement("div");
+    item.className = "item";
 
-  const r=Math.random();
+    let isBad = Math.random() < 0.35;
+    item.innerHTML = isBad
+        ? badItems[Math.floor(Math.random() * badItems.length)]
+        : goodItems[Math.floor(Math.random() * goodItems.length)];
 
-  if(r<0.4){
-    item.textContent=Math.random()<0.5?"❤️":"💋";
-    item.dataset.type="good";
-  }else if(r<0.55){
-    item.textContent="💣";
-    item.dataset.type="bomb";
-    item.classList.add("bad");
-  }else if(r<0.65){
-    item.textContent="🚀";
-    item.dataset.type="rocket";
-    item.classList.add("bad");
-  }else{
-    item.textContent=word[Math.floor(Math.random()*word.length)];
-    item.dataset.type="letter";
-  }
+    item.style.left = Math.random() * (window.innerWidth - 50) + "px";
+    item.style.animationDuration = (2 + Math.random() * 1.5) + "s";
 
-  item.style.left=Math.random()*(window.innerWidth-60)+"px";
-  item.style.top="-60px";
-  document.body.appendChild(item);
+    document.body.appendChild(item);
 
-  let fall=setInterval(()=>{
-    if(gameOver){
-      clearInterval(fall);
-      item.remove();
-      return;
-    }
+    let check = setInterval(() => {
+        let itemRect = item.getBoundingClientRect();
+        let basketRect = basket.getBoundingClientRect();
 
-    item.style.top=item.offsetTop+speed+"px";
-
-    const r1=item.getBoundingClientRect();
-    const r2=basket.getBoundingClientRect();
-
-    if(
-      r1.bottom>r2.top &&
-      r1.left<r2.right &&
-      r1.right>r2.left
-    ){
-      if(item.dataset.type==="good"){
-        score++;
-      }
-      else if(item.dataset.type==="bomb"){
-        score=Math.max(0,score-1);
-      }
-      else if(item.dataset.type==="rocket"){
-        endGame("🚀 Kaybettin!");
-      }
-      else if(item.dataset.type==="letter"){
-        if(letterIndex<6){
-          slotsDiv.children[letterIndex].textContent=word[letterIndex];
-          letterIndex++;
-          if(letterIndex===6){
-            winGame();
-          }
+        if (
+            itemRect.bottom >= basketRect.top &&
+            itemRect.left < basketRect.right &&
+            itemRect.right > basketRect.left
+        ) {
+            if (badItems.includes(item.innerHTML)) {
+                endGame(false);
+            } else {
+                score++;
+                scoreEl.innerText = "Skor: " + score;
+                if (score >= 10) endGame(true);
+            }
+            item.remove();
+            clearInterval(check);
         }
-      }
 
-      scoreText.textContent=score;
-      item.remove();
-      clearInterval(fall);
-    }
-
-    if(item.offsetTop>window.innerHeight){
-      item.remove();
-      clearInterval(fall);
-    }
-  },20);
+        if (itemRect.top > window.innerHeight) {
+            item.remove();
+            clearInterval(check);
+        }
+    }, 20);
 }
 
-function winGame(){
-  gameOver=true;
-  message.style.display="flex";
-  msgText.innerHTML="🎉🎆 KAZANDIN 🎆🎉<br>Kocan seni çok seviyor 💖";
+function endGame(win) {
+    gameOver = true;
+    message.style.display = "flex";
+    messageText.innerHTML = win
+        ? "🎉 Kazandın Aşkım! 💖<br>Seni Çok Seviyorum 😘"
+        : "💔 Kaybettin 😢<br>Ama Ben Seni Hep Seveceğim ❤️";
 }
 
-function endGame(text){
-  gameOver=true;
-  message.style.display="flex";
-  msgText.innerHTML=text;
+function restart() {
+    document.querySelectorAll(".item").forEach(i => i.remove());
+    score = 0;
+    gameOver = false;
+    scoreEl.innerText = "Skor: 0";
+    message.style.display = "none";
 }
 
-// zorlaşma
-setInterval(()=>{
-  speed+=0.3;
-  if(spawnRate>500) spawnRate-=50;
-},4000);
-
-// oyun döngüsü
-function loop(){
-  if(!gameOver){
-    createItem();
-    setTimeout(loop,spawnRate);
-  }
-}
-loop();
+setInterval(dropItem, 700);
 </script>
 
 </body>
