Update goodItems array to include 'Y' instead of 'A'

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ const messageText = document.getElementById("messageText");
 let score = 0;
 let gameOver = false;
 
-const goodItems = ["❤️","💋","😍","🥰","💖","A","Ş","K"];
+const goodItems = ["❤️","💋","😍","🥰","💖","Y","Ş","K"];
 const badItems = ["💣","💔","🚀"];
 
 /* === KAYDIRMALI SEPET === */
