--- a/index.html
+++ b/index.html
@@ -2,187 +2,202 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Seni Çok Seviyorum ❤️</title>
+<title>Romantik Yıldız Oyunu</title>
 
 <style>
-body {
-    margin: 0;
-    overflow: hidden;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    font-family: Arial, sans-serif;
-    text-align: center;
+*{margin:0;padding:0;box-sizing:border-box;}
+body{
+  overflow:hidden;
+  height:100vh;
+  background:linear-gradient(120deg,#ffb6c1,#ffd1dc);
+  font-family:Arial,sans-serif;
 }
 
-h1 {
-    color: white;
-    margin-top: 15px;
-    text-shadow: 2px 2px 8px #ff4d6d;
+/* Sepet */
+#basket{
+  position:absolute;
+  bottom:130px;
+  left:50%;
+  transform:translateX(-50%);
+  width:140px;
+  height:40px;
+  border-radius:20px;
+  background:rgba(255,255,255,0.7);
+  backdrop-filter:blur(6px);
+  transition:0.1s;
 }
 
-#score {
-    color: white;
-    font-size: 22px;
+/* Alt kutular */
+#boxes{
+  position:absolute;
+  bottom:20px;
+  width:100%;
+  display:flex;
+  justify-content:center;
+  gap:12px;
+}
+.box{
+  width:65px;
+  height:65px;
+  border-radius:14px;
+  background:rgba(255,255,255,0.4);
+  backdrop-filter:blur(6px);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:28px;
+  font-weight:bold;
+  color:#d63384;
 }
 
-#basket {
-    position: absolute;
-    bottom: 20px;
-    font-size: 64px;
-    left: 50%;
-    transform: translateX(-50%);
-    cursor: grab;
-    user-select: none;
+/* Yıldız */
+.star{
+  position:absolute;
+  font-size:52px;
+  filter:drop-shadow(0 0 6px gold);
+  pointer-events:none;
 }
 
-.item {
-    position: absolute;
-    top: -50px;
-    font-size: 52px;
-    animation: fall linear;
+/* Final ekran */
+#final{
+  position:absolute;
+  inset:0;
+  background:rgba(255,182,193,0.95);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  text-align:center;
 }
-
-@keyframes fall {
-    to {
-        transform: translateY(110vh);
-    }
+#final h1{
+  color:#b4004e;
+  margin-bottom:20px;
 }
-
-#message {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.75);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: white;
-    font-size: 36px;
-    z-index: 10;
-}
-
-#message button {
-    margin-top: 20px;
-    padding: 12px 25px;
-    font-size: 20px;
-    border: none;
-    border-radius: 12px;
-    background: #ff4d6d;
-    color: white;
-    cursor: pointer;
+#final button{
+  padding:10px 20px;
+  border:none;
+  border-radius:20px;
+  background:#ff4f81;
+  color:white;
+  font-size:16px;
+  cursor:pointer;
 }
 </style>
 </head>
 
 <body>
 
-<h1>❤️ Kocan Seni Çok Seviyor ❤️</h1>
-<div id="score">Skor: 0</div>
+<div id="basket"></div>
 
-<div id="basket">🗑️</div>
+<div id="boxes"></div>
 
-<div id="message">
-    <div id="messageText"></div>
-    <button onclick="restart()">Tekrar Oyna 💕</button>
+<div id="final">
+  <h1>💖 Tebrikler aşkım<br>İsmini topladın<br>Kocan seni çok seviyor 💖</h1>
+  <button onclick="location.reload()">Tekrar Oyna</button>
 </div>
 
 <script>
-const basket = document.getElementById("basket");
-const scoreEl = document.getElementById("score");
-const message = document.getElementById("message");
-const messageText = document.getElementById("messageText");
+/* AYARLAR */
+const nameLetters = ["A","Y","Ş","E","N","U"]; // 6 harf – DEĞİŞTİREBİLİRSİN
+let activeLetters = [...nameLetters];
+let filled = {};
+let basket = document.getElementById("basket");
+let boxes = document.getElementById("boxes");
 
-let score = 0;
-let gameOver = false;
-
-const goodItems = ["❤️","💋","😍","🥰","💖","Y","Ş","K"];
-const badItems = ["💣","💔","🚀"];
-
-/* === KAYDIRMALI SEPET === */
-let dragging = false;
-
-basket.addEventListener("mousedown", () => dragging = true);
-document.addEventListener("mouseup", () => dragging = false);
-
-document.addEventListener("mousemove", e => {
-    if (!dragging) return;
-    moveBasket(e.clientX);
+/* Kutuları oluştur */
+nameLetters.forEach(l=>{
+  let b=document.createElement("div");
+  b.className="box";
+  b.dataset.letter=l;
+  boxes.appendChild(b);
 });
 
-basket.addEventListener("touchstart", () => dragging = true);
-document.addEventListener("touchend", () => dragging = false);
-
-document.addEventListener("touchmove", e => {
-    if (!dragging) return;
-    moveBasket(e.touches[0].clientX);
+/* Sepet kontrol */
+document.addEventListener("mousemove",e=>{
+  basket.style.left=e.clientX+"px";
 });
 
-function moveBasket(x) {
-    let pos = x - basket.offsetWidth / 2;
-    pos = Math.max(0, Math.min(window.innerWidth - basket.offsetWidth, pos));
-    basket.style.left = pos + "px";
+/* Yıldız oluştur */
+function dropStar(){
+  if(activeLetters.length===0) return;
+
+  let letter = activeLetters[Math.floor(Math.random()*activeLetters.length)];
+  let star=document.createElement("div");
+  star.className="star";
+  star.innerHTML="⭐"+letter;
+  star.style.left=Math.random()*(window.innerWidth-50)+"px";
+  star.style.top="-60px";
+  document.body.appendChild(star);
+
+  let y= -60;
+  let fall=setInterval(()=>{
+    y+=3;
+    star.style.top=y+"px";
+
+    let sRect=star.getBoundingClientRect();
+    let bRect=basket.getBoundingClientRect();
+
+    if(
+      sRect.bottom>bRect.top &&
+      sRect.left<bRect.right &&
+      sRect.right>bRect.left
+    ){
+      checkBox(letter,star);
+      clearInterval(fall);
+    }
+
+    if(y>window.innerHeight){
+      star.remove();
+      clearInterval(fall);
+    }
+  },16);
 }
 
-/* === OYUN === */
-function dropItem() {
-    if (gameOver) return;
-
-    const item = document.createElement("div");
-    item.className = "item";
-
-    const isBad = Math.random() < 0.35;
-    item.textContent = isBad
-        ? badItems[Math.floor(Math.random() * badItems.length)]
-        : goodItems[Math.floor(Math.random() * goodItems.length)];
-
-    item.style.left = Math.random() * (window.innerWidth - 50) + "px";
-    item.style.animationDuration = (2 + Math.random() * 1.5) + "s";
-
-    document.body.appendChild(item);
-
-    const check = setInterval(() => {
-        const r1 = item.getBoundingClientRect();
-        const r2 = basket.getBoundingClientRect();
-
-        if (
-            r1.bottom >= r2.top &&
-            r1.left < r2.right &&
-            r1.right > r2.left
-        ) {
-            if (badItems.includes(item.textContent)) {
-                endGame(false);
-            } else {
-                score++;
-                scoreEl.textContent = "Skor: " + score;
-                if (score >= 10) endGame(true);
-            }
-            item.remove();
-            clearInterval(check);
-        }
-
-        if (r1.top > window.innerHeight) {
-            item.remove();
-            clearInterval(check);
-        }
-    }, 20);
+/* Kutu kontrol */
+function checkBox(letter,star){
+  let box=document.querySelector(`.box[data-letter='${letter}']`);
+  if(!filled[letter]){
+    box.textContent=letter;
+    filled[letter]=true;
+    activeLetters=activeLetters.filter(l=>l!==letter);
+    miniCelebrate(box);
+    if(activeLetters.length===0) endGame();
+  }
+  star.remove();
 }
 
-function endGame(win) {
-    gameOver = true;
-    message.style.display = "flex";
-    messageText.innerHTML = win
-        ? "🎉 Kazandın Aşkım 💖<br>Seni Çok Seviyorum 😘"
-        : "💔 Kaybettin 😢<br>Ama Seni Hep Seveceğim ❤️";
+/* Mini kutlama */
+function miniCelebrate(box){
+  box.style.background="rgba(255,255,255,0.8)";
+  setTimeout(()=>box.style.background="rgba(255,255,255,0.4)",300);
 }
 
-function restart() {
-    document.querySelectorAll(".item").forEach(i => i.remove());
-    score = 0;
-    gameOver = false;
-    scoreEl.textContent = "Skor: 0";
-    message.style.display = "none";
+/* Final */
+function endGame(){
+  setTimeout(()=>{
+    document.getElementById("final").style.display="flex";
+    edgeCelebrate();
+  },600);
 }
 
-setInterval(dropItem, 700);
+/* Kenar kutlaması */
+function edgeCelebrate(){
+  for(let i=0;i<80;i++){
+    let p=document.createElement("div");
+    p.style.position="fixed";
+    p.style.width="8px";
+    p.style.height="8px";
+    p.style.borderRadius="50%";
+    p.style.background="pink";
+    p.style.left=Math.random()*window.innerWidth+"px";
+    p.style.top=Math.random()<0.5?"0":"100%";
+    document.body.appendChild(p);
+    setTimeout(()=>p.remove(),3000);
+  }
+}
+
+/* Oyun döngüsü */
+setInterval(dropStar,900);
 </script>
 
 </body>
